--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
 show_downloads: false
 title: ZHONG Yuan
-description: Postgraduate Student of LL.M. in Tokyo
+description: A Postgraduate Student of LL.M. in Tokyo, Japan
