--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-cayman
+theme: jekyll-theme-slate
 show_downloads: false
 title: ZHONG Yuan
 description: A Postgraduate Student of LL.M. in Tokyo, Japan
